@@ -1,3 +1,10 @@
+Mon May 26 18:26:03 2003  Alex Waugh  <alex@alexwaugh.com>
+
+	* pthread/create.c (__pthread_create): Initialise the saved SPSR.
+	* pthread/init.c (mainthread): Fix linkage.
+	* pthread/testcancel.c (pthread_testcancel): Don't cancel if
+	  context switching is disabled.
+
 Sun May 25 22:44:12 2003  Alex Waugh  <alex@alexwaugh.com>
 
 	* MKDir,feb: Remove file, now autogenerated.
